# Stratification-s-Color-Palette

./: README.md  classic.py  fade.py  gradient.py  main.py  omega.py  omega1.py  omega2.py  omega3.py  overlay.py  pyproject.toml
