[tool.poetry]
name = "Stratification's_Color_Palette"
version = "0.0.1"
description = "An interactive color palette"
authors = ["Stratification <stratjel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
